[gd_scene load_steps=5 format=3 uid="uid://bdeu5v3r52w3a"]

[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="1_qm286"]
[ext_resource type="Script" uid="uid://it3grddd3ny0" path="res://scenes/ui/settings_panel.gd" id="2_5qqek"]
[ext_resource type="FontFile" uid="uid://di7gplllef8xy" path="res://assets/ui/fonts/pixelFont-7-8x14-sproutLands.ttf" id="2_i3lpr"]
[ext_resource type="PackedScene" uid="uid://bom8wled5o01v" path="res://scenes/components/click_button_audio.tscn" id="4_5qqek"]

[node name="SettingsPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qm286")
theme_type_variation = &"InventoryItemPanel"
script = ExtResource("2_5qqek")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WindowTitle" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(276, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i3lpr")
theme_override_font_sizes/font_size = 45
text = "Config"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(51, 40)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("2_i3lpr")
theme_override_font_sizes/font_size = 36
text = "X"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 64)
layout_mode = 2
theme_type_variation = &"CheckButtonItem"
button_pressed = true
text = "Music"
alignment = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("2_i3lpr")
theme_override_font_sizes/font_size = 27
text = "Menu Principal"

[node name="ClickButton" parent="." instance=ExtResource("4_5qqek")]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="toggled" from="VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
